feat: unit tests
Signed-off-by: Glib Kozyryatskyy <glib.k@swirldslabs.com>